[package]
name = "podflow"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "podflow"
path = "src/main.rs"

[[bin]]
name = "podflow-cli"
path = "src/bin/podflow_cli.rs"

[[bin]]
name = "podflow-collector"
path = "src/bin/collector_daemon.rs"
required-features = ["nri-grpc"]

[[bin]]
name = "podflow-adapters"
path = "src/bin/podflow_adapters_cli.rs"

[lib]
name = "podflow"
path = "src/lib.rs"

[dependencies]
serde = { version = "=1.0.200", features = ["derive"] }
serde_json = "=1.0.120"
axum = "=0.7.5"
tokio = { version = "=1.40", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "signal"] }
sha2 = "=0.10.8"
uuid = { version = "=1.10", features = ["v4"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["fmt", "env-filter"] }
chrono = { version = "=0.4.38", features = ["serde"] }
reqwest = { version = "=0.11.18", features = ["json"] }
serde_yaml = "=0.9.34"
thiserror = "=1.0.58"

# High-performance concurrent data structures
dashmap = "=5.5"

# Embedded database for persistence
sled = "=0.34.7"

clap = { version = "=4.5.4", features = ["derive", "env"] }
atty = "0.2"
libc = "=0.2.155"
async-trait = "=0.1.80"
regex = "=1.10.5"
tempfile = "3.8"

# gRPC dependencies for privilege separation (experimental)
tonic = { version = "0.12", features = ["tls"], optional = true }
prost = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", features = ["net"], optional = true }

# Kubernetes integration dependencies
k8s-openapi = { version = "0.21", features = ["v1_29"], optional = true }
kube = { version = "0.90", features = ["client", "derive"], optional = true }
kube-derive = { version = "0.90", optional = true }

nix = { version = "0.29", features = ["socket", "process"] }
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
tonic-build = "0.12"

[features]
default = []
nri-grpc = ["tonic", "prost", "tokio-stream"]
k8s-integration = ["k8s-openapi", "kube", "kube-derive"]
security-audit = []
api = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "performance_benchmarks"
harness = false